# oversimple

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _async_oversampling_8hpp_source.html  _fir_oversampling_8hpp_source.html  _hiir_8hpp_source.html  _iir_oversampling_8hpp_source.html  _iir_oversampling_designer_8hpp_source.html  _iir_oversampling_factory_8hpp_source.html  _oversampling_8hpp_source.html  annotated.html  classes.html  classhiir_1_1_downsampler2x16_avx-members.html  classhiir_1_1_downsampler2x16_avx.html  classhiir_1_1_downsampler2x2_f64_neon-members.html  classhiir_1_1_downsampler2x2_f64_neon.html  classhiir_1_1_downsampler2x2_f64_sse2-members.html  classhiir_1_1_downsampler2x2_f64_sse2.html  classhiir_1_1_downsampler2x4_avx_double-members.html  classhiir_1_1_downsampler2x4_avx_double.html  classhiir_1_1_downsampler2x4_f64_avx-members.html  classhiir_1_1_downsampler2x4_f64_avx.html  classhiir_1_1_downsampler2x4_neon-members.html  classhiir_1_1_downsampler2x4_neon.html  classhiir_1_1_downsampler2x4_sse-members.html  classhiir_1_1_downsampler2x4_sse.html  classhiir_1_1_downsampler2x8_avx-members.html  classhiir_1_1_downsampler2x8_avx.html  classhiir_1_1_downsampler2x8_f64_avx-members.html  classhiir_1_1_downsampler2x8_f64_avx.html  classhiir_1_1_upsampler2x16_avx-members.html  classhiir_1_1_upsampler2x16_avx.html  classhiir_1_1_upsampler2x2_f64_neon-members.html  classhiir_1_1_upsampler2x2_f64_neon.html  classhiir_1_1_upsampler2x2_f64_sse2-members.html  classhiir_1_1_upsampler2x2_f64_sse2.html  classhiir_1_1_upsampler2x4_avx_double-members.html  classhiir_1_1_upsampler2x4_avx_double.html  classhiir_1_1_upsampler2x4_f64_avx-members.html  (+103 more)
oversimple/: .clang-format  AsyncOversampling.hpp  FirOversampling.cpp  FirOversampling.hpp  Hiir.hpp  IirOversampling.hpp  IirOversamplingDesigner.hpp  IirOversamplingFactory.hpp  Oversampling.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  searchdata.js
test/: .clang-format  CMakeLists.txt  iir-design.cpp  testing.cpp
